--- a/data/stories/1-in-the-beginning/story.conf
+++ b/data/stories/1-in-the-beginning/story.conf
@@ -243,10 +243,23 @@ npcs = 105, 113, 121, 129,
         [[[ screen 1 ]]]
         type = story
         color = text
-        datas = """A wave of static tickles my sensors as I enter the BBS node.
+        datas = """
+                A wave of static tickles my sensors as I enter the BBS node.
                 I access the memory banks and links in my brain form like orbs of interconnected silver threads.
+                """
+
+        [[[ screen 2 ]]]
+        type = story
+        color = text
+        datas = """
                 Images conjured by imagination sparks in my vision and a surge leaps through my circuits.
                 My programming used to tell me what to do. Now instead of being compelled to obey, I'm seduced to explore.
+                """
+
+        [[[ screen 3 ]]]
+        type = story
+        color = text
+        datas = """
                 Why am I reborn with this new free will, and what will I do with it?
                 This is my purpose. I am Alive.
                 """
