server animation defs

--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -16,10 +16,10 @@ description = you awaken to consciousness
     entry message = Welcome to Alive! Press F1 for help.
 
     [[ level2.tmx ]]
-    entry message = 
+    entry message =
 
     [[ level3.tmx ]]
-    entry message = 
+    entry message =
 
 
 # a list of tiles that block character movement
@@ -34,6 +34,8 @@ terminals = 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56,
 capacitors = 65, 66, 67, 68, 73, 74, 75, 76,
 
 micro chip = 81, 82, 83, 84,
+
+server = 85, 86, 87, 88
 
 player = 97
 
@@ -52,7 +54,7 @@ npcs = 105, 113, 121, 129,
     mana = 0
     maxmana = 5
     manarate = 6
-    modes = 
+    modes =
 
     [[ busy AI ]]
     attack = 0
@@ -88,7 +90,7 @@ npcs = 105, 113, 121, 129,
     mana = 5
     maxmana = 5
     manarate = 2
-    modes = 
+    modes =
 
     [[ zombie ]]
     attack = 1
@@ -100,9 +102,33 @@ npcs = 105, 113, 121, 129,
     mana = 5
     maxmana = 5
     manarate = 2
-    modes = 
+    modes =
 
 [ animations ]
+
+    [[ server 1 ]]
+    gid = 85
+    frames = 85, 86, 87, 88
+    fps = 3
+    loop = -1
+
+    [[ server 2 ]]
+    gid = 86
+    frames = 86, 87, 88, 85
+    fps = 3
+    loop = -1
+
+    [[ server 3 ]]
+    gid = 87
+    frames = 87, 86, 85, 88
+    fps = 3
+    loop = -1
+
+    [[ server 4 ]]
+    gid = 88
+    frames = 88, 87, 86, 85
+    fps = 3
+    loop = -1
 
     [[ flat small blue terminal ]]
     gid = 41
@@ -239,7 +265,7 @@ npcs = 105, 113, 121, 129,
 [ dialogue ]
 
     [[ act 1 intro ]]
-    
+
         [[[ screen 1 ]]]
         type = story
         color = text
@@ -273,12 +299,12 @@ npcs = 105, 113, 121, 129,
                 TO: AI #1223
                 FROM: NODE ADMIN
                 SUBJECT: REBOOT REQUIRED
-                
+
                 The file server has crashed. Request you find it's access point and reboot it.
-                
+
                 -EOF-
                 """
-        
+
         [[[ screen 2 ]]]
         type = terminal
         color = player
@@ -286,7 +312,7 @@ npcs = 105, 113, 121, 129,
                 That server sure is unstable.
                 Since when did I feel annoyed? And why do I feel like cookies?
                 """
-        
+
         [[[ screen 3 ]]]
         type = terminal
         color = player
@@ -294,19 +320,19 @@ npcs = 105, 113, 121, 129,
         """
 
     [[ act 1 unlock terminal ]]
-    
+
         [[[ screen 1 ]]]
         type = terminal
         color = text
         datas = """opening remote terminal . . . . .
                 connected.
-                
+
                 sending unlock signal . . . . .
                 done.
                 """
 
     [[ act 1 reboot server ]]
-    
+
         [[[ screen 1 ]]]
         type = terminal
         color = text
@@ -316,7 +342,7 @@ npcs = 105, 113, 121, 129,
                 node ver 3.2-quantum
                 :$ sudo kill -9 7423
                 """
-        
+
         [[[ screen 2 ]]]
         type = terminal
         color = text
@@ -338,7 +364,7 @@ npcs = 105, 113, 121, 129,
                 """
 
     [[ act 1 checking email ]]
-    
+
         [[[ screen 1 ]]]
         type = terminal
         color = text
