add test-map.tmx for demoing map building features

--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -12,6 +12,8 @@ description = you awaken to consciousness
 
 [ levels ]
 
+    [[ test-map.tmx ]]
+
     [[ level1.tmx ]]
     entry message = Welcome to Alive! Press F1 for help.
 
