--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -57,6 +57,8 @@ npcs = 105, 113, 121, 129,
     maxmana = 5
     manarate = 6
     modes =
+    view_range = 4
+
 
     [[ busy AI ]]
     attack = 0
@@ -69,6 +71,7 @@ npcs = 105, 113, 121, 129,
     maxmana = 5
     manarate = 2
     modes = leftright
+    view_range = 2
 
     [[ ICE ]]
     attack = 1
@@ -81,6 +84,7 @@ npcs = 105, 113, 121, 129,
     maxmana = 5
     manarate = 2
     modes = leftright, magnet
+    view_range = 4
 
     [[ virus ]]
     attack = 1
@@ -93,6 +97,7 @@ npcs = 105, 113, 121, 129,
     maxmana = 5
     manarate = 2
     modes =
+    view_range = 3
 
     [[ zombie ]]
     attack = 1
@@ -105,6 +110,7 @@ npcs = 105, 113, 121, 129,
     maxmana = 5
     manarate = 2
     modes =
+    view_range = 6
 
 [ animations ]
 
