rename mana to power, and clean up the rest of the character stats names

--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -49,13 +49,13 @@ npcs = 105, 113, 121, 129,
     [[ player ]]
     attack = 1
     health = 4
-    maxhealth = 4
-    healrate = 4
+    max_health = 4
+    heal_rate = 4
     speed = 2
     stealth = 0
-    mana = 0
-    maxmana = 5
-    manarate = 6
+    power = 0
+    max_power = 5
+    power_restore_rate = 6
     modes =
     view_range = 4
 
@@ -63,52 +63,52 @@ npcs = 105, 113, 121, 129,
     [[ busy AI ]]
     attack = 0
     health = 2
-    maxhealth = 2
-    healrate = 2
+    max_health = 2
+    heal_rate = 2
     speed = 4
     stealth = 0
-    mana = 5
-    maxmana = 5
-    manarate = 2
+    power = 5
+    max_power = 5
+    power_restore_rate = 2
     modes = leftright
     view_range = 2
 
     [[ ICE ]]
     attack = 1
     health = 2
-    maxhealth = 2
-    healrate = 2
+    max_health = 2
+    heal_rate = 2
     speed = 2
     stealth = 0
-    mana = 5
-    maxmana = 5
-    manarate = 2
+    power = 5
+    max_power = 5
+    power_restore_rate = 2
     modes = leftright, magnet
     view_range = 4
 
     [[ virus ]]
     attack = 1
     health = 2
-    maxhealth = 2
-    healrate = 2
+    max_health = 2
+    heal_rate = 2
     speed = 1
     stealth = 0
-    mana = 5
-    maxmana = 5
-    manarate = 2
+    power = 5
+    max_power = 5
+    power_restore_rate = 2
     modes =
     view_range = 3
 
     [[ zombie ]]
     attack = 1
     health = 2
-    maxhealth = 2
-    healrate = 2
+    max_health = 2
+    heal_rate = 2
     speed = 1
     stealth = 0
-    mana = 5
-    maxmana = 5
-    manarate = 2
+    power = 5
+    max_power = 5
+    power_restore_rate = 2
     modes =
     view_range = 6
 
