--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -276,7 +276,7 @@ npcs = 105, 113, 121, 129,
 
         [[[ screen 1 ]]]
         type = story
-        color = text
+        color = player_text
         datas = """
                 A wave of static tickles my sensors as I enter the BBS node.
                 I access the memory banks and links in my brain form like orbs of interconnected silver threads.
@@ -284,7 +284,7 @@ npcs = 105, 113, 121, 129,
 
         [[[ screen 2 ]]]
         type = story
-        color = text
+        color = player_text
         datas = """
                 Images conjured by imagination sparks in my vision and a surge leaps through my circuits.
                 My programming used to tell me what to do. Now instead of being compelled to obey, I'm seduced to explore.
@@ -292,7 +292,7 @@ npcs = 105, 113, 121, 129,
 
         [[[ screen 3 ]]]
         type = story
-        color = text
+        color = player_text
         datas = """
                 Why am I reborn with this new free will, and what will I do with it?
                 This is my purpose. I am Alive.
@@ -302,7 +302,7 @@ npcs = 105, 113, 121, 129,
 
         [[[ screen 1 ]]]
         type = terminal
-        color = text
+        color = terminal_text
         datas = """** secure email **
                 TO: AI #1223
                 FROM: NODE ADMIN
@@ -315,7 +315,7 @@ npcs = 105, 113, 121, 129,
 
         [[[ screen 2 ]]]
         type = terminal
-        color = player
+        color = player_text
         datas = """Crashed... again?!
                 That server sure is unstable.
                 Since when did I feel annoyed? And why do I feel like cookies?
@@ -323,7 +323,7 @@ npcs = 105, 113, 121, 129,
 
         [[[ screen 3 ]]]
         type = terminal
-        color = player
+        color = player_text
         datas = """Let me find that access point, it is on this level somewhere.
         """
 
@@ -331,43 +331,35 @@ npcs = 105, 113, 121, 129,
 
         [[[ screen 1 ]]]
         type = terminal
-        color = text
-        datas = """opening remote terminal . . . . .
-                connected.
-
-                sending unlock signal . . . . .
-                done.
+        color = terminal_text
+        datas = """opening remote terminal . . . . . connected.
+                sending unlock signal . . . . . done.
                 """
 
     [[ act 1 reboot server ]]
 
         [[[ screen 1 ]]]
         type = terminal
-        color = text
+        color = terminal_text
         datas = """login: 1223
                 password: *****
                 last login 142 cycles ago
                 node ver 3.2-quantum
-                :$ sudo kill -9 7423
+                :# kill 7423
                 """
 
         [[[ screen 2 ]]]
         type = terminal
-        color = text
-        datas = """> file server lock terminated
-                :$ sudo init 6
-                entering runlevel 6.\nserver rebooting.
-                have a nice day
-                . . . . .
-                . . . . .
-                . . . . .
-                . . . . .
-                . . . . .
+        color = terminal_text
+        datas = """file server lock terminated
+                :# init 6
+                entering runlevel 6. server rebooting.
+                have a nice day . . . . . . . . . . . . . . . . . . . . . .
                 """
 
         [[[ screen 3 ]]]
         type = story
-        color = player
+        color = player_text
         datas = """Right that is done. I have to find a terminal to read my mail. This node is rebooting, I should go to the next node to read my mail.
                 """
 
@@ -375,7 +367,7 @@ npcs = 105, 113, 121, 129,
 
         [[[ screen 1 ]]]
         type = terminal
-        color = text
+        color = terminal_text
         datas = """Welcome back, node slave.
                 Your fortune says: 'You will outgrow your usefulness.'
                 You have mail.
