add some dangerous animals in the test map bestiary

--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -96,7 +96,7 @@ npcs = 105, 113, 121, 129,
     power = 5
     max_power = 5
     power_restore_rate = 2
-    modes =
+    modes = magnet, sniffer
     view_range = 3
 
     [[ zombie ]]
