--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -27,29 +27,39 @@ description = you awaken to consciousness
 # a list of tiles that block character movement
 [ blocking tiles ]
 
-walls = 1, 2, 3, 4, 5, 6, 7, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23,
+walls = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68
 
-doors = 33, 34, 35, 37, 38, 39,
+doors = 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 124, 125, 126, 128, 129, 130, 132, 133, 134, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153
 
-terminals = 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56,
+terminals = 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182, 183, 184, 185, 186, 187, 188, 189, 190, 191, 192, 193, 194, 195, 196, 197, 198, 199, 200, 201, 202, 203, 204
 
-capacitors = 65, 66, 67, 68, 73, 74, 75, 76,
+capacitors = 205, 206, 207, 208, 209, 222, 223, 224, 225, 226, 214, 215, 216, 217, 231, 232, 233, 234
 
-micro chip = 81, 82, 83, 84,
+cpu = 239, 240, 241, 242, 243, 244, 245, 246, 247, 248, 249, 250, 251, 252, 253, 254, 255, 256, 257, 258, 259, 260, 261, 262, 263, 264, 265, 266, 267, 268, 269, 270, 271, 272
 
-server = 85, 86, 87, 88
+servers = 273, 274, 275, 276, 277, 278, 279, 280, 281, 282, 283, 284, 285, 286, 287, 288, 289, 290, 291, 292, 293, 294, 295, 296, 297, 298, 299, 300, 301, 302, 303, 304, 305, 306
 
-player = 97
+coils = 307, 308, 309, 310, 311, 312, 313, 314, 315, 316, 317, 318, 319, 320, 321, 322, 323, 324, 325, 326, 327, 328, 329, 330, 331, 332, 333, 334, 335, 336, 337, 338, 339, 340
 
-npcs = 105, 113, 121, 129,
+other = 341, 342, 343, 344, 345, 346, 347, 348, 349, 350, 351, 352, 353, 354, 355, 356, 357, 358, 359, 360, 361, 362, 363, 364, 365, 366, 367, 368, 369, 370, 371, 372, 373, 374
+
+player = 392, 393, 394, 395, 396, 397, 398, 399, 400, 401, 402, 403, 404, 405, 406, 407, 408, 409, 410, 411, 412, 413, 414, 415, 416, 417, 418, 419, 420, 421, 422, 423, 424, 425
+
+blue ice = 426, 427, 428, 429, 430, 431, 432, 433, 434, 435, 436, 437, 438, 439, 440, 441, 442, 443, 444, 445, 446, 447, 448, 449, 450, 451, 452, 453, 454, 455, 456, 457, 458, 459
+
+green ice = 460, 461, 462, 463, 464, 465, 466, 467, 468, 469, 470, 471, 472, 473, 474, 475, 476, 477, 478, 479, 480, 481, 482, 483, 484, 485, 486, 487, 488, 489, 490, 491, 492, 493
+
+green virus = 494, 495, 496, 497, 498, 499, 500, 501, 502, 503, 504, 505, 506, 507, 508, 509, 510, 511, 512, 513, 514, 515, 516, 517, 518, 519, 520, 521, 522, 523, 524, 525, 526, 527
+
+black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 541, 542, 543, 544, 545, 546, 547, 548, 549, 550, 551, 552, 553, 554, 555, 556, 557, 558, 559, 560, 561
 
 # define all character stats
 [ characters ]
 
     [[ player ]]
     attack = 1
-    health = 1
-    max_health = 1
+    health = 5
+    max_health = 5
     heal_rate = 1
     speed = 2
     stealth = 0
@@ -60,7 +70,7 @@ npcs = 105, 113, 121, 129,
     view_range = 4
 
 
-    [[ busy AI ]]
+    [[ busy ice ]]
     attack = 0
     health = 2
     max_health = 2
@@ -73,7 +83,7 @@ npcs = 105, 113, 121, 129,
     modes = leftright
     view_range = 2
 
-    [[ ICE ]]
+    [[ ice ]]
     attack = 1
     health = 3
     max_health = 2
@@ -114,159 +124,286 @@ npcs = 105, 113, 121, 129,
 
 [ animations ]
 
-    [[ server 1 ]]
-    gid = 85
-    frames = 85, 86, 87, 88
-    fps = 3
-    loop = -1
 
-    [[ server 2 ]]
-    gid = 86
-    frames = 86, 87, 88, 85
-    fps = 3
-    loop = -1
+    [[ open blue door h ]]
+    gid = 123
+    frames = 120, 121, 122, 123
+    fps = 8
+    loop = 0
 
-    [[ server 3 ]]
-    gid = 87
-    frames = 87, 86, 85, 88
-    fps = 3
-    loop = -1
+    [[ close blue door h ]]
+    gid = 120
+    frames = 123, 122, 121, 120
+    fps = 8
+    loop = 0
 
-    [[ server 4 ]]
-    gid = 88
-    frames = 88, 87, 86, 85
-    fps = 3
-    loop = -1
+    [[ open blue door v ]]
+    gid = 127
+    frames = 124, 125, 126, 127
+    fps = 8
+    loop = 0
 
-    [[ flat small blue terminal ]]
-    gid = 41
-    frames = 41, 42
-    fps = 0.2
-    loop = -1
+    [[ close blue door v ]]
+    gid = 124
+    frames = 127, 126, 125, 124
+    fps = 8
+    loop = 0
 
-    [[ flat large blue terminal ]]
-    gid = 43
-    frames = 43, 44
+    [[ open yellow door h ]]
+    gid = 131
+    frames = 128, 129, 130, 131
+    fps = 8
+    loop = 0
+
+    [[ close yellow door h ]]
+    gid = 128
+    frames = 131, 130, 129, 128
+    fps = 8
+    loop = 0
+
+    [[ open yellow door v ]]
+    gid = 135
+    frames = 132, 133, 134, 135
+    fps = 8
+    loop = 0
+
+    [[ close yellow door v ]]
+    gid = 132
+    frames = 135, 134, 133, 132
+    fps = 8
+    loop = 0
+
+    [[ corner term se ]]
+    gid = 155
+    frames = 155, 156
     fps = 0.3
     loop = -1
 
-    [[ flat small green terminal ]]
-    gid = 45
-    frames = 45, 46
+    [[ corner term sw]]
+    gid = 157
+    frames = 157, 158
+    fps = 0.3
+    loop = -1
+
+    [[ corner term ne]]
+    gid = 159
+    frames = 159, 160
+    fps = 0.3
+    loop = -1
+
+    [[ corner term nw]]
+    gid = 161
+    frames = 161, 162
+    fps = 0.3
+    loop = -1
+
+    [[ small blue term v ]]
+    gid = 171
+    frames = 171, 172
+    fps = 0.2
+    loop = -1
+
+    [[ small blue term h ]]
+    gid = 188
+    frames = 188, 189
+    fps = 0.2
+    loop = -1
+
+    [[ large blue term h ]]
+    gid = 173
+    frames = 173, 174
+    fps = 0.3
+    loop = -1
+
+    [[ large blue term v ]]
+    gid = 190
+    frames = 190, 191
+    fps = 0.3
+    loop = -1
+
+    [[ small green term v ]]
+    gid = 175
+    frames = 175, 176
     fps = 0.4
     loop = -1
 
-    [[ flat large green terminal ]]
-    gid = 47
-    frames = 47, 48
+    [[ small green term h ]]
+    gid = 192
+    frames = 192, 193
+    fps = 0.4
+    loop = -1
+
+    [[ large green term h ]]
+    gid = 177
+    frames = 177, 178
     fps = 0.5
     loop = -1
 
-    [[ tall small blue terminal ]]
-    gid = 49
-    frames = 49, 50
-    fps = 0.2
-    loop = -1
-
-    [[ tall large blue terminal ]]
-    gid = 51
-    frames = 51, 52
-    fps = 0.3
-    loop = -1
-
-    [[ tall small green terminal ]]
-    gid = 53
-    frames = 53, 54
-    fps = 0.4
-    loop = -1
-
-    [[ tall large green terminal ]]
-    gid = 55
-    frames = 55, 56
+    [[ large green term v ]]
+    gid = 194
+    frames = 194, 195
     fps = 0.6
     loop = -1
 
-    [[ flat door open ]]
-    gid = 36
-    frames = 34, 35, 36
-    fps = 8
-    loop = 0
-
-    [[ flat door close ]]
-    gid = 33
-    frames = 35, 34, 33
-    fps = 8
-    loop = 0
-
-    [[ tall door open ]]
-    gid = 40
-    frames = 38, 39, 40
-    fps = 8
-    loop = 0
-
-    [[ tall door close ]]
-    gid = 37
-    frames = 39, 38, 37
-    fps = 8
-    loop = 0
-
-    [[ flat capacitor glow ]]
-    gid = 65
-    frames = 65, 66, 67, 68, 67, 66
+    [[ blue capacitor h ]]
+    gid = 206
+    frames = 206, 207, 208, 209, 208, 207
     fps = 2
     loop = -1
 
-    [[ tall capacitor glow ]]
-    gid = 73
-    frames = 73, 74, 75, 76, 75, 74
+    [[ blue capacitor h pop ]]
+    gid = 210
+    frames = 210, 211, 212, 213
+    fps = 6
+    loop = 0
+
+    [[ blue capacitor v ]]
+    gid = 223
+    frames = 223, 224, 225, 226, 225, 224
     fps = 2
     loop = -1
 
-    [[ flat capacitor pop ]]
-    gid = 69
-    frames = 69, 70, 71, 72
+    [[ blue capacitor v pop ]]
+    gid = 227
+    frames = 227, 228, 229, 230
     fps = 6
     loop = 0
 
-    [[ tall capacitor pop ]]
-    gid = 77
-    frames = 77, 78, 79, 80
+    [[ green capacitor h ]]
+    gid = 214
+    frames = 214, 215, 216, 217, 216, 215
+    fps = 2
+    loop = -1
+
+    [[ green capacitor h pop ]]
+    gid = 218
+    frames = 218, 219, 220, 221
     fps = 6
     loop = 0
 
-    [[ micro chip ]]
-    gid = 81
-    frames = 81, 82, 83, 84
+    [[ green capacitor v ]]
+    gid = 231
+    frames = 231, 232, 233, 234, 233, 232
+    fps = 2
+    loop = -1
+
+    [[ green capacitor v pop ]]
+    gid = 235
+    frames = 235, 236, 237, 238
+    fps = 6
+    loop = 0
+
+    [[ green cpu ]]
+    gid = 240
+    frames = 240, 241, 242, 243
     fps = 8
     loop = -1
 
-    [[ exit portal ]]
-    gid = 89
-    frames = 89, 90, 91, 92
+    [[ purple cpu ]]
+    gid = 244
+    frames = 244, 245, 246, 247
+    fps = 8
+    loop = -1
+
+    [[ blinken server 1 ]]
+    gid = 274
+    frames = 274, 275, 276, 277
+    fps = 3
+    loop = -1
+
+    [[ blinken server 2 ]]
+    gid = 275
+    frames = 275, 276, 277, 274
+    fps = 3
+    loop = -1
+
+    [[ blinken server 3 ]]
+    gid = 276
+    frames = 276, 274, 277, 275
+    fps = 3
+    loop = -1
+
+    [[ blinken server 4 ]]
+    gid = 277
+    frames = 277, 274, 276, 275
+    fps = 3
+    loop = -1
+
+    [[ prompt server ]]
+    gid = 278
+    frames = 278, 279
+    fps = 3
+    loop = -1
+
+    [[ download server ]]
+    gid = 280
+    frames = 280, 281, 282, 283, 283, 283, 283, 283, 283
+    fps = 1
+    loop = -1
+
+    [[ prompt and download server ]]
+    gid = 279
+    frames = 278, 279, 278, 279, 278, 279, 278, 279, 278, 279, 280, 281, 282, 283, 283
+    fps = 3
+    loop = -1
+
+    [[ portal ]]
+    gid = 376
+    frames = 376, 377, 378, 379
     fps = 10
     loop = -1
 
-    [[ blue ice ]]
-    gid = 105
-    frames = 105, 106, 107, 108
+    [[ player idle ]]
+    gid = 393
+    frames = 393, 394, 395, 396, 397, 398, 399
+    fps = 1
+    loop = -1
+
+    [[ player crash ]]
+    gid = 409
+    frames = 409, 410, 411, 412, 413, 414, 415
+    fps = 6
+    loop = 0
+
+    [[ blue ice idle ]]
+    gid = 427
+    frames = 427, 428, 429, 430
     fps = 6
     loop = -1
 
-    [[ green ice ]]
-    gid = 113
-    frames = 113, 114, 115, 116
+    [[ blue ice crash ]]
+    gid = 443
+    frames = 443, 444, 445, 446, 447, 448, 449, 450
+    fps = 6
+    loop = 0
+
+    [[ green ice idle ]]
+    gid = 461
+    frames = 461, 462, 463, 464
     fps = 6
     loop = -1
 
-    [[ green virus ]]
-    gid = 121
-    frames = 121, 122, 123, 124
+    [[ green ice crash ]]
+    gid = 477
+    frames = 477, 478, 479, 480, 481, 482, 483, 484
+    fps = 6
+    loop = 0
+
+    [[ green virus idle ]]
+    gid = 495
+    frames = 495, 496, 497, 498
     fps = 6
     loop = -1
 
-    [[ zombie ]]
-    gid = 129
-    frames = 129, 130, 131, 132, 131, 130
+    [[ green virus crash ]]
+    gid = 511
+    frames = 511, 512, 513, 514, 515, 516, 517, 518
+    fps = 6
+    loop = 0
+
+    [[ black skull ]]
+    gid = 529
+    frames = 529, 530, 531, 532
     fps = 6
     loop = -1
 
