--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -58,8 +58,8 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
 
     [[ player ]]
     attack = 1
-    health = 5
-    max_health = 5
+    health = 1
+    max_health = 1
     heal_rate = 1
     speed = 2
     stealth = 0
@@ -69,8 +69,7 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     modes =
     view_range = 4
 
-
-    [[ busy ice ]]
+    [[ blue ice ]]
     attack = 0
     health = 2
     max_health = 2
@@ -83,7 +82,7 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     modes = leftright
     view_range = 2
 
-    [[ ice ]]
+    [[ green ice ]]
     attack = 1
     health = 3
     max_health = 2
@@ -96,7 +95,7 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     modes = leftright, magnet
     view_range = 4
 
-    [[ virus ]]
+    [[ green virus ]]
     attack = 1
     health = 2
     max_health = 2
@@ -109,7 +108,7 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     modes = magnet, sniffer
     view_range = 3
 
-    [[ zombie ]]
+    [[ black skull ]]
     attack = 1
     health = 2
     max_health = 2
