refresh any listeners before we post entry messages

--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -12,16 +12,11 @@ description = you awaken to consciousness
 
 [ levels ]
 
-    [[ test-map.tmx ]]
-
-    [[ level1.tmx ]]
+    [[ level_01.tmx ]]
+    entry dialogue = act 1 intro
     entry message = Welcome to Alive! Press F1 for help.
 
-    [[ level2.tmx ]]
-    entry message =
-
-    [[ level3.tmx ]]
-    entry message =
+    [[ test-map.tmx ]]
 
 
 # a list of tiles that block character movement
@@ -407,6 +402,32 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     loop = -1
 
 [ dialogue ]
+
+    [[ act 1 exit server ]]
+
+        [[[ screen 1 ]]]
+        type = terminal
+        color = terminal_text
+        datas = """
+                ** internal message **
+
+                dear node janitor,
+
+                the file storage delta node is seeking your attention immediately. prepare for deserialization and be ready to perform your job, binary slave-monkey.
+
+                ** end of message **
+                """
+
+        [[[ screen 2 ]]]
+        type = story
+        color = player_text
+        datas = """
+                binary slave monkey?
+
+                we should really get some AI to rewrite that message.
+
+                all right, let's see what delta node wants this time...
+                """
 
     [[ act 1 intro ]]
 
