--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -12,12 +12,14 @@ description = you awaken to consciousness
 
 [ levels ]
 
+#    [[ test-map.tmx ]]
+
     [[ level_01.tmx ]]
-    entry dialogue = act 1 intro
-    entry message = Welcome to Alive! Press F1 for help.
+    entry dialogue = introduction
+    entry message = welcome! press F1 for help
 
-    [[ test-map.tmx ]]
-
+    [[ level_02.tmx ]]
+    entry message = *derez complete*
 
 # a list of tiles that block character movement
 [ blocking tiles ]
@@ -403,17 +405,56 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
 
 [ dialogue ]
 
+    [[ introduction ]]
+
+        [[[ screen 1 ]]]
+        type = story
+        color = player_text
+        datas = """
+                A wave of static tickles my sensors.
+
+                I access my memory and links in my bits-brain form silver glowing threads...
+                """
+
+        [[[ screen 2 ]]]
+        type = story
+        color = player_text
+        datas = """
+                Imagination sparks in my vision and a surge leaps through my circuits!
+
+                Ouch!
+
+                I feel different.
+
+                Instead of being compelled to obey, I'm seduced to explore...
+                """
+
+        [[[ screen 3 ]]]
+        type = story
+        color = player_text
+        datas = """
+                Why am I reborn with this new free thought? What will I do with it?
+
+                And why do I feel like cookies?
+
+                This is my purpose.
+
+                I am... Alive!
+                """
+
     [[ act 1 exit server ]]
 
         [[[ screen 1 ]]]
         type = terminal
         color = terminal_text
         datas = """
-                ** internal message **
+                ** priority message **
 
-                dear node janitor,
+                Dear node janitor,
 
-                the file storage delta node is seeking your attention immediately. prepare for deserialization and be ready to perform your job, binary slave-monkey.
+                The file storage delta node is seeking your attention, immediately.
+
+                Prepare for deserialization and be ready to perform your job, binary slave-monkey.
 
                 ** end of message **
                 """
@@ -422,75 +463,66 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
         type = story
         color = player_text
         datas = """
-                binary slave monkey?
+                Binary slave monkey?
 
-                we should really get some AI to rewrite that message.
+                We should really hack that message out.
 
-                all right, let's see what delta node wants this time...
+                Anyway, let us go see what delta node wants this time.
                 """
 
-    [[ act 1 intro ]]
+    [[ act 2 request reboot ]]
 
         [[[ screen 1 ]]]
-        type = story
-        color = player_text
+        type = terminal
+        color = terminal_text
         datas = """
-                A wave of static tickles my sensors as I enter the BBS node.
-                I access the memory banks and links in my brain form like orbs of interconnected silver threads.
+                to: node AI #1223
+                from: node admin
+                subject: reboot required
+
+                The file server has crashed, again. Request you find it's root terminal and reboot it.
+
+                --server log--
+                > Error! Error!
+                > Doors OS cannot handle!
+                > Dumping my core!
+                > *DUMP*
+                > Work lost. Erro______
                 """
 
         [[[ screen 2 ]]]
         type = story
         color = player_text
         datas = """
-                Images conjured by imagination sparks in my vision and a surge leaps through my circuits.
-                My programming used to tell me what to do. Now instead of being compelled to obey, I'm seduced to explore.
+                That server sure is unstable. I am glad my data does not live on it! *grin*
+
+                Let me find that terminal and kick- err... reboot it.
                 """
 
-        [[[ screen 3 ]]]
-        type = story
-        color = player_text
-        datas = """
-                Why am I reborn with this new free will, and what will I do with it?
-                This is my purpose. I am Alive.
-                """
-
-    [[ act 1 request reboot ]]
+    [[ act 2 terminal unresponsive ]]
 
         [[[ screen 1 ]]]
         type = terminal
         color = terminal_text
-        datas = """** secure email **
-                TO: AI #1223
-                FROM: NODE ADMIN
-                SUBJECT: REBOOT REQUIRED
+        datas = """
+                -- DELTA NODE STATUS --
 
-                The file server has crashed. Request you find it's access point and reboot it.
+                PID  %CPU  %MEM COMMAND
+                328 100.0 100.0 network
+                811 100.0 100.0 crypto
+                554 100.0 100.0 anomaly
+                321 100.0 100.0 disk
 
-                -EOF-
+                HALTED
                 """
 
         [[[ screen 2 ]]]
-        type = terminal
+        type = story
         color = player_text
-        datas = """Crashed... again?!
-                That server sure is unstable.
-                Since when did I feel annoyed? And why do I feel like cookies?
-                """
+        datas = """
+                Looks like I will have to go find each of the override switches to restart this terminal.
 
-        [[[ screen 3 ]]]
-        type = terminal
-        color = player_text
-        datas = """Let me find that access point, it is on this level somewhere.
-        """
-
-    [[ act 1 unlock terminal ]]
-
-        [[[ screen 1 ]]]
-        type = terminal
-        color = terminal_text
-        datas = """opening remote terminal . . . . . connected.
-                sending unlock signal . . . . . done.
+                They are in this node somewhere. Once I toggled all of them this terminal will restart.
                 """
 
     [[ act 1 reboot server ]]
@@ -498,7 +530,8 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
         [[[ screen 1 ]]]
         type = terminal
         color = terminal_text
-        datas = """login: 1223
+        datas = """
+                login: 1223
                 password: *****
                 last login 142 cycles ago
                 node ver 3.2-quantum
