--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -405,6 +405,12 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
 
 [ dialogue ]
 
+    #   #   #   #   #   #   #   #   #   #
+    # INTRODUCTION
+    #
+    # Tells the story of your awakening into consciousness.
+    # Displayed on entering the very first level.
+
     [[ introduction ]]
 
         [[[ screen 1 ]]]
@@ -442,6 +448,9 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
                 I am... Alive!
                 """
 
+    #   #   #   #   #   #   #   #   #   #
+    # ACT 1
+
     [[ act 1 exit server ]]
 
         [[[ screen 1 ]]]
@@ -469,6 +478,9 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
 
                 Anyway, let us go see what delta node wants this time.
                 """
+
+    #   #   #   #   #   #   #   #   #   #
+    # ACT 2
 
     [[ act 2 request reboot ]]
 
@@ -525,35 +537,69 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
                 They are in this node somewhere. Once I toggled all of them this terminal will restart.
                 """
 
-    [[ act 1 reboot server ]]
+    [[ act 2 core reboot ]]
 
         [[[ screen 1 ]]]
         type = terminal
         color = terminal_text
         datas = """
-                login: 1223
-                password: *****
-                last login 142 cycles ago
-                node ver 3.2-quantum
-                :# kill 7423
+                Welcome to core node
+                .    _      _ _
+                . __| | ___| | |_ __ _
+                ./ _` |/ _ \ | __/ _` |
+                | (_| |  __/ | || (_| |
+                .\__,_|\___|_|\__\__,_|
+                .
+                .
+                Login: ________________
                 """
 
         [[[ screen 2 ]]]
         type = terminal
         color = terminal_text
-        datas = """file server lock terminated
-                :# init 6
-                entering runlevel 6. server rebooting.
-                have a nice day . . . . . . . . . . . . . . . . . . . . . .
+        datas = """
+                Login for lowly AI #1223 OK.
+                ::Log file /var/log/lameserver.log
+                ::Time: 42FE cycles
+                ::Anomaly detected.
+                ::Warning, unknown (EE) error
+                ::error...error...error...error...error...error...error...error...error...
                 """
 
         [[[ screen 3 ]]]
         type = story
         color = player_text
-        datas = """Right that is done. I have to find a terminal to read my mail. This node is rebooting, I should go to the next node to read my mail.
+        datas = """
+                What the heck is going on with this server?
+
+                I better backup me before I break too...
                 """
 
-    [[ act 1 checking email ]]
+        [[[ screen 4 ]]]
+        type = terminal
+        color = terminal_text
+        datas = """
+                ::error...
+                Last login was 442 cycles ago. Node is version 200.
+                MOTD: the q3iZk_br//n f^x ju_ps://er [he ]azy dog!
+
+                Asking the core to restart nicely
+
+                You have mail.
+                Error opening file, server is restarting...
+                """
+
+        [[[ screen 5 ]]]
+        type = story
+        color = player_text
+        datas = """
+                Right, my work here is done. Once the core reboots I am
+                leaving here to go read my mail on a terminal that *actually works*.
+
+                Everything is acting so weird, what *is* going on today?!
+                """
+
+    [[ act 3 checking email ]]
 
         [[[ screen 1 ]]]
         type = terminal
