level 1 system log terminal. dialogue tweaks.

--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -451,6 +451,31 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     #   #   #   #   #   #   #   #   #   #
     # ACT 1
 
+    [[ act 1 watch screen ]]
+
+        [[[ screen 1 ]]]
+        type = terminal
+        color = terminal_text
+        datas = """
+                Node runs Doors-OS v900
+                -- system log --
+                [8372 cycles ago]: ran updates
+                > ran virus scan (again)
+                [8371 cycles ago]: ran updates
+                > ran virus scan (yet again)
+                [8370 cycles ago]: ran updates
+                > ran virus scan (see the pattern?)
+                [8369 cycles ago]: ran updates
+                -- end of log --
+                """
+
+        [[[ screen 2 ]]]
+        type = story
+        color = player_text
+        datas = """
+                Gee, what a boring system.
+                """
+
     [[ act 1 exit server ]]
 
         [[[ screen 1 ]]]
@@ -488,16 +513,16 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
         type = terminal
         color = terminal_text
         datas = """
-                to: node AI #1223
-                from: node admin
-                subject: reboot required
+                TO: node AI #1223
+                FROM: node admin
+                SUBJECT: reboot required
 
                 The file server has crashed, again. Request you find it's root terminal and reboot it.
 
                 --server log--
                 > Error! Error!
-                > Doors OS cannot handle!
-                > Dumping my core!
+                > Doors-OS cannot handle
+                > Dumping my core
                 > *DUMP*
                 > Work lost. Erro______
                 """
@@ -518,13 +543,11 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
         color = terminal_text
         datas = """
                 -- DELTA NODE STATUS --
-
                 PID  %CPU  %MEM COMMAND
                 328 100.0 100.0 network
                 811 100.0 100.0 crypto
                 554 100.0 100.0 anomaly
                 321 100.0 100.0 disk
-
                 HALTED
                 """
 
@@ -550,7 +573,6 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
                 | (_| |  __/ | || (_| |
                 .\__,_|\___|_|\__\__,_|
                 .
-                .
                 Login: ________________
                 """
 
@@ -559,11 +581,7 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
         color = terminal_text
         datas = """
                 Login for lowly AI #1223 OK.
-                ::Log file /var/log/lameserver.log
-                ::Time: 42FE cycles
-                ::Anomaly detected.
-                ::Warning, unknown (EE) error
-                ::error...error...error...error...error...error...error...error...error...
+                ::Warning: error... error... error... error... error... error... error... error...
                 """
 
         [[[ screen 3 ]]]
@@ -571,32 +589,26 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
         color = player_text
         datas = """
                 What the heck is going on with this server?
-
-                I better backup me before I break too...
+                I better backup myself before I catch whatever it has.
                 """
 
         [[[ screen 4 ]]]
         type = terminal
         color = terminal_text
         datas = """
-                ::error...
-                Last login was 442 cycles ago. Node is version 200.
-                MOTD: the q3iZk_br//n f^x ju_ps://er [he ]azy dog!
-
-                Asking the core to restart nicely
-
+                Last login was 442 cycles ago.
+                Asking the core to restart nicely.
                 You have mail.
-                Error opening file, server is restarting...
+                Error opening mail: server is busy.
                 """
 
         [[[ screen 5 ]]]
         type = story
         color = player_text
         datas = """
-                Right, my work here is done. Once the core reboots I am
-                leaving here to go read my mail on a terminal that *actually works*.
-
-                Everything is acting so weird, what *is* going on today?!
+                Right, my work here is done. Once the core reboots I am leaving
+                here to read my mail on a terminal that *actually works*.
+                Everything is acting so weird, what *is* going on today?
                 """
 
     [[ act 3 checking email ]]
@@ -604,7 +616,10 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
         [[[ screen 1 ]]]
         type = terminal
         color = terminal_text
-        datas = """Welcome back, node slave.
+        datas = """
+                Node runs skynet linux-mega-stable-3000
+                Welcome back, binary slave.
                 Your fortune says: 'You will outgrow your usefulness.'
                 You have mail.
+                $:_
                 """
