add skels for level 3 and 4

--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -16,10 +16,16 @@ description = you awaken to consciousness
 
     [[ level_01.tmx ]]
     entry dialogue = introduction
-    entry message = welcome! press F1 for help
+    entry message = welcome to alive - press F1 for help
 
     [[ level_02.tmx ]]
-    entry message = *derez complete*
+    entry message = "The big reboot"
+
+    [[ level_03.tmx ]]
+    entry message = "anomalies may occur"
+
+    [[ level_04.tmx ]]
+    entry message = "the doctor will see you now"
 
 # a list of tiles that block character movement
 [ blocking tiles ]
