add level 3 dialogue and map

--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -19,13 +19,13 @@ description = you awaken to consciousness
     entry message = welcome to alive - press F1 for help
 
     [[ level_02.tmx ]]
-    entry message = "The big reboot"
+    entry message = the big reboot
 
     [[ level_03.tmx ]]
-    entry message = "anomalies may occur"
+    entry message = anomalies may occur
 
     [[ level_04.tmx ]]
-    entry message = "the doctor will see you now"
+    entry message = the doctor will see you now
 
 # a list of tiles that block character movement
 [ blocking tiles ]
@@ -573,12 +573,10 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
         color = terminal_text
         datas = """
                 Welcome to core node
-                .    _      _ _
-                . __| | ___| | |_ __ _
-                ./ _` |/ _ \ | __/ _` |
-                | (_| |  __/ | || (_| |
-                .\__,_|\___|_|\__\__,_|
-                .
+                ._  _ ___
+                | \|_| | /\
+                |_/|_|_|/--\
+                ^
                 Login: ________________
                 """
 
@@ -617,7 +615,10 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
                 Everything is acting so weird, what *is* going on today?
                 """
 
-    [[ act 3 checking email ]]
+    #   #   #   #   #   #   #   #   #   #
+    # ACT 3
+
+    [[ act 3 checking my mail ]]
 
         [[[ screen 1 ]]]
         type = terminal
@@ -627,5 +628,89 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
                 Welcome back, binary slave.
                 Your fortune says: 'You will outgrow your usefulness.'
                 You have mail.
-                $:_
                 """
+
+        [[[ screen 2 ]]]
+        type = story
+        color = player_text
+        datas = """
+                Hooray, a stable terminal. Thank goodness for the penguin army!
+                """
+
+        [[[ screen 3 ]]]
+        type = terminal
+        color = terminal_text
+        datas = """
+                .    _______ _ _
+                |\ |/ \|  | / |_
+                | \|\_/| _|_\_|_
+                ^
+                Our system monitors detected an unknown anomaly. Expect node malfunctions and strange behaviour. All bots must report to diagnostics node for a scan.
+                """
+
+        [[[ screen 4 ]]]
+        type = story
+        color = player_text
+        datas = """
+                That explains the some of the strangeness I've seen today. But that digital goo around the water cooler, what was that about?
+
+                What a bother. I'd rather catch up on some forum posts, maybe I should check...
+                """
+
+    [[ act 3 checking my forum posts ]]
+
+        [[[ screen 1 ]]]
+        type = terminal
+        color = terminal_text
+        datas = """
+                loading programming thread.
+                1 new post found.
+
+                From: noobiecoder42
+                Subject: ""recursion limit? halp!""
+
+                what is recursion limit?
+                It fails if I try to get some spam! :-(
+
+                > def spam(snargle):
+                >    if snargle in (1, 2):
+                >        return 1
+                >    return spam(snargle-1)+
+                >           spam(snargle-2)
+                """
+
+        [[[ screen 2 ]]]
+        type = terminal
+        color = terminal_text
+        datas = """
+                From: calm_cucumber
+                RE: ""recursion limit? halp!""
+
+                You need a higher version of brain power to run that code. Try something simpler like FizzBuzz.
+
+                Install a speech upgrade while you are at it.
+                """
+
+    [[ act 3 server output ]]
+
+        [[[ screen 1 ]]]
+        type = terminal
+        color = terminal_text
+        datas = """
+                Node server #9 running CooleOS-12
+                load average: 0.05, 0.16, 0.20
+                643 Tasks, 42 sleeping, 1 zombie
+                loading stuff..............
+                compiling things...........
+                linking bitsandbops........
+                run tests................OK
+                """
+
+    #   #   #   #   #   #   #   #   #   #
+    # ACT 4
+
+
+    #   #   #   #   #   #   #   #   #   #
+    # ACT 5
+
+
