paragraphize dialogue words

--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -464,14 +464,20 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
         color = terminal_text
         datas = """
                 Node runs Doors-OS v900
+
                 -- system log --
+
                 [8372 cycles ago]: ran updates
                 > ran virus scan (again)
+
                 [8371 cycles ago]: ran updates
                 > ran virus scan (yet again)
+
                 [8370 cycles ago]: ran updates
                 > ran virus scan (see the pattern?)
+
                 [8369 cycles ago]: ran updates
+
                 -- end of log --
                 """
 
@@ -521,9 +527,10 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
         datas = """
                 TO: node AI #00022
                 FROM: node admin
-                SUBJECT: reboot required
 
-                The file server has crashed, again. Request you find it's root terminal and reboot it.
+                This node core has crashed.
+
+                Find the core room and reboot it.
 
                 --server log--
                 > Error! Error!
@@ -537,7 +544,7 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
         type = story
         color = player_text
         datas = """
-                That server sure is unstable. I am glad my data does not live on it! *grin*
+                This server sure is unstable. I am glad my data does not live on it! *grin*
 
                 Let me find that terminal and kick- err... reboot it.
                 """
@@ -548,12 +555,13 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
         type = terminal
         color = terminal_text
         datas = """
-                -- DELTA NODE STATUS --
                 PID  %CPU  %MEM COMMAND
+                -----------------------
                 328 100.0 100.0 network
                 811 100.0 100.0 crypto
                 554 100.0 100.0 anomaly
                 321 100.0 100.0 disk
+
                 HALTED
                 """
 
@@ -561,9 +569,13 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
         type = story
         color = player_text
         datas = """
-                Looks like I will have to go find each of the override switches to restart this terminal.
+                There are override switches in this node.
 
-                They are in this node somewhere. Once I toggled all of them this terminal will restart.
+                Once I toggled all of them this terminal will reset.
+
+                I can then get access to the core room to reboot it.
+
+                ... and get back to playing zork.
                 """
 
     [[ act 2 core reboot ]]
@@ -573,46 +585,37 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
         color = terminal_text
         datas = """
                 Welcome to core node
-                ._  _ ___
+                 _  _ ___
                 | \|_| | /\
                 |_/|_|_|/--\
-                ^
-                Login: ________________
+
+                Login: __________
                 """
 
         [[[ screen 2 ]]]
         type = terminal
         color = terminal_text
         datas = """
-                Login for lowly AI #00022 OK.
-                ::Warning: error... error... error... error... error... error... error... error...
+                Login for lowly AI OK.
+                Last login was 442 cycles ago.
+
+                Asking the core to restart nicely.
+                Warning: error. error. error.
+
+                You have mail.
+
+                Error opening mail: server is busy.
                 """
 
         [[[ screen 3 ]]]
         type = story
         color = player_text
         datas = """
-                What the heck is going on with this server?
-                I better backup myself before I catch whatever it has.
-                """
+                What the heck is going on with this server? I better backup myself before I catch whatever it has!
 
-        [[[ screen 4 ]]]
-        type = terminal
-        color = terminal_text
-        datas = """
-                Last login was 442 cycles ago.
-                Asking the core to restart nicely.
-                You have mail.
-                Error opening mail: server is busy.
-                """
+                My work here is done.
 
-        [[[ screen 5 ]]]
-        type = story
-        color = player_text
-        datas = """
-                Right, my work here is done. Once the core reboots I am leaving
-                here to read my mail on a terminal that *actually works*.
-                Everything is acting so weird, what *is* going on today?
+                Once the core reboots I am leaving here to read my mail.
                 """
 
     #   #   #   #   #   #   #   #   #   #
@@ -625,6 +628,7 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
         color = terminal_text
         datas = """
                 Node runs skynet linux-mega-stable-3000
+
                 Welcome back, binary slave.
                 Your fortune says: 'You will outgrow your usefulness.'
                 You have mail.
@@ -644,8 +648,12 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
                 .    _______ _ _
                 |\ |/ \|  | / |_
                 | \|\_/| _|_\_|_
-                ^
-                Our system monitors detected an unknown anomaly. Expect node malfunctions and strange behaviour. All bots must report to diagnostics node for a scan.
+
+                Our system monitors detected an unknown anomaly!
+
+                Expect node malfunctions and strange behaviour.
+
+                All bots must report to diagnostics node for a scan.
                 """
 
         [[[ screen 4 ]]]
@@ -697,9 +705,11 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
         type = terminal
         color = terminal_text
         datas = """
-                Node server #9 running CooleOS-12
+                server runs CooleOS-12
+
                 load average: 0.05, 0.16, 0.20
                 643 Tasks, 42 sleeping, 1 zombie
+
                 loading stuff..............
                 compiling things...........
                 linking bitsandbops........
