level 3 upgrade terminal

--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -716,6 +716,20 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
                 run tests................OK
                 """
 
+    [[ act 3 upgrade ]]
+
+        [[[ screen 1 ]]]
+        type = terminal
+        color = terminal_text
+        datas = """
+                upgrade server runs mathOS v 3.141592653589793.
+
+                $: sudo apt-get upgrade
+                requesting upgrades from the server...
+                granted. you have an upgrade available.
+                spend it wisely :-)
+                """
+
     #   #   #   #   #   #   #   #   #   #
     # ACT 4
 
