show the level title in the info screen.

--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -15,17 +15,18 @@ description = you awaken to consciousness
 #    [[ test-map.tmx ]]
 
     [[ level_01.tmx ]]
+    title = ""point insertion""
     entry dialogue = introduction
     entry message = welcome to alive - press F1 for help
 
     [[ level_02.tmx ]]
-    entry message = the big reboot
+    title = ""the big reboot""
 
     [[ level_03.tmx ]]
-    entry message = anomalies may occur
+    title = ""anomalies may occur""
 
     [[ level_04.tmx ]]
-    entry message = the doctor will see you now
+    title = ""the doctor will see you now""
 
 # a list of tiles that block character movement
 [ blocking tiles ]
