--- a/data/alive.conf
+++ b/data/alive.conf
@@ -11,6 +11,15 @@
 #  You should have received a copy of the GNU General Public License
 #  along with this program. If not, see http://www.gnu.org/licenses/.
 
+[ about ]
+
+    [[ screen 1 ]]
+    type = terminal
+    color = player_text
+    datas = """
+            about stuff
+            """
+
 [ stories ]
 
     [[ ascension ]]
