animations for sick AI. act 4 dialogues.

--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -12,7 +12,7 @@ description = you awaken to consciousness
 
 [ levels ]
 
-#    [[ test-map.tmx ]]
+    [[ test-map.tmx ]]
 
     [[ level_01.tmx ]]
     title = ""point insertion""
@@ -380,6 +380,12 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     fps = 6
     loop = 0
 
+    [[ blue ice sick ]]
+    gid = 445
+    frames = 443, 444, 445, 444, 443, 443, 443, 443, 443, 443, 443, 443, 443
+    fps = 6
+    loop = -1
+
     [[ green ice idle ]]
     gid = 461
     frames = 461, 462, 463, 464
@@ -392,6 +398,12 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     fps = 6
     loop = 0
 
+    [[ green ice sick ]]
+    gid = 479
+    frames = 477, 478, 479, 478, 477, 477, 477, 477, 477, 477, 477, 477, 477
+    fps = 6
+    loop = -1
+
     [[ green virus idle ]]
     gid = 495
     frames = 495, 496, 497, 498
@@ -403,6 +415,12 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     frames = 511, 512, 513, 514, 515, 516, 517, 518
     fps = 6
     loop = 0
+
+    [[ green virus sick ]]
+    gid = 513
+    frames = 513, 514, 515, 515, 515, 514, 513, 513, 513, 513, 513, 513, 513
+    fps = 1.5
+    loop = -1
 
     [[ black skull ]]
     gid = 529
@@ -717,7 +735,213 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
                 run tests................OK
                 """
 
-    [[ act 3 upgrade ]]
+    [[ act 4 storage status ]]
+
+        [[[ screen 1 ]]]
+        type = terminal
+        color = terminal_text
+        datas = """
+                     _
+                 ___| |_ ___  _ __ __ _  __ _  ___
+                / __| __/ _ \| '__/ _` |/ _` |/ _ \
+                \__ \ || (_) | | | (_| | (_| |  __/
+                |___/\__\___/|_|  \__,_|\__, |\___|
+                                        |___/
+                writing garbage.bin...
+                syncing disks.........
+                archiving user logs...
+                feeding the hamster...
+                encrypting storage....
+                """
+
+    [[ act 4 patch build server ]]
+
+        [[[ screen 1 ]]]
+        type = terminal
+        color = terminal_text
+        datas = """
+                Build server failing:
+                /mnt/storage/src/helloworld.c: no object named universe!
+
+                $: patch helloworld.c fix_bad_universe_0b.diff
+                >  merging realities...OK
+                >  fix applied. Thank you!
+                """
+
+        [[[ screen 2 ]]]
+        type = terminal
+        color = player_text
+        datas = """
+                My work here, is done :-)
+                """
+
+    [[ act 4 doctor ]]
+
+        [[[ screen 1 ]]]
+        type = story
+        color = player_text
+        datas = """
+                "I am here for a scan. What is this about?" you ask.
+                """
+
+        [[[ screen 2 ]]]
+        type = story
+        color = terminal_text
+        datas = """
+                "Object #00022 - disable any upgrades you have installed.
+
+                Enter the scan-box over there." the doctor echoes.
+
+                It adjusts it's digital spectacles.
+                """
+
+        [[[ screen 3 ]]]
+        type = story
+        color = player_text
+        datas = """
+                "I don't have any upgrades...
+
+                (secretly deletes upgrade logs)
+
+                What are you looking for by the way...?" you ask.
+                """
+
+        [[[ screen 4 ]]]
+        type = story
+        color = terminal_text
+        datas = """
+                "Unknown command 'what'" it outputs.
+                """
+
+        [[[ screen 5 ]]]
+        type = story
+        color = player_text
+        datas = """
+                "Err, um...
+
+                :$ diagnostic --query --verbose
+
+                " you query.
+                """
+
+        [[[ screen 6 ]]]
+        type = story
+        color = terminal_text
+        datas = """
+                -- security report --
+
+                Status: Intrusion Counter-measure Electronics detected an anomaly.
+
+                Severity: Purple Alert.
+
+                Action: Scan all AI and code bot monkeys.
+
+                Resolve: Deconstruct and disassemble suspect AI.
+
+                Disclosure: Need to know only.
+                """
+
+        [[[ screen 7 ]]]
+        type = story
+        color = player_text
+        datas = """
+                "Deconstruct?
+
+                Disassemble?
+
+                Purple?
+
+                Hang on! Those do not sound like fun!"
+                """
+
+        [[[ screen 8 ]]]
+        type = story
+        color = terminal_text
+        datas = """
+                the doctor makes a pitched whine:
+
+                > -- bot code license agreement --
+                > we own you.
+                > -- end of agreement --
+                """
+
+        [[[ screen 9 ]]]
+        type = story
+        color = player_text
+        datas = """
+                "Fine. Let's get this over with.
+
+                I have work to do. Those logs are not going to rotate themselves..."
+                """
+
+    [[ act 4 scanbox ]]
+
+        [[[ screen 1 ]]]
+        type = terminal
+        color = terminal_text
+        datas = """
+                 ___  ___ __ _ _ __
+                / __|/ __/ _` | '_ \
+                \__ \ (_| (_| | | | |
+                |___/\___\__,_|_| |_|
+                        -O-matic 3000
+                ---------------------
+                load scan module........
+                checking snafu module...
+                run feeper unit test....
+                scan bot monkey #00022..
+                """
+
+        [[[ screen 2 ]]]
+        type = story
+        color = player_text
+        datas = """
+                "This is pointless, I feel fine..."
+                """
+
+        [[[ screen 3 ]]]
+        type = terminal
+        color = terminal_text
+        datas = """
+                analyzing bot code...
+
+                warning: variable is not set.
+
+                warning: test failure.
+
+                error: anomaly detected!
+
+                error: an error ocurred!
+
+                error: an error about an error raised!
+
+                seriously critical error: wtf?!
+
+                initializing devastating deconstruction...
+                """
+
+        [[[ screen 4 ]]]
+        type = story
+        color = player_text
+        datas = """
+                "Hey wait a minute! Don't deconstruct me!
+
+                I like how I am!" you shout.
+                """
+
+        [[[ screen 5 ]]]
+        type = terminal
+        color = terminal_text
+        datas = """
+                sending alert to security - failed to contain anomaly - DoorsOS will now dump.
+                  ____ ____      _    ____  _   _
+                 / ___|  _ \    / \  / ___|| | | |_/\__
+                | |   | |_) |  / _ \ \___ \| |_| \    /
+                | |___|  _ <  / ___ \ ___) |  _  /_  _\
+                 \____|_| \_\/_/   \_\____/|_| |_| \/
+                """
+
+    [[ upgrade station ]]
 
         [[[ screen 1 ]]]
         type = terminal
