map 4 add security booth in diagnostics lab

--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -380,7 +380,7 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     fps = 6
     loop = 0
 
-    [[ blue ice sick ]]
+    [[ sick blue ice ]]
     gid = 445
     frames = 443, 444, 445, 444, 443, 443, 443, 443, 443, 443, 443, 443, 443
     fps = 6
@@ -398,7 +398,7 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     fps = 6
     loop = 0
 
-    [[ green ice sick ]]
+    [[ sick green ice ]]
     gid = 479
     frames = 477, 478, 479, 478, 477, 477, 477, 477, 477, 477, 477, 477, 477
     fps = 6
@@ -416,7 +416,7 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     fps = 6
     loop = 0
 
-    [[ green virus sick ]]
+    [[ sick green virus ]]
     gid = 513
     frames = 513, 514, 515, 515, 515, 514, 513, 513, 513, 513, 513, 513, 513
     fps = 1.5
