add "the doctor" crash animation. tweak character attributes.

--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -64,7 +64,7 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     attack = 1
     health = 5
     max_health = 5
-    heal_rate = 1
+    heal_rate = 0.5
     speed = 2
     stealth = 0
     power = 0
@@ -74,10 +74,10 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     view_range = 4
 
     [[ blue ice ]]
-    attack = 0
+    attack = 1
     health = 2
     max_health = 2
-    heal_rate = 2
+    heal_rate = 0.3
     speed = 4
     stealth = 0
     power = 5
@@ -87,10 +87,10 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     view_range = 2
 
     [[ green ice ]]
-    attack = 1
+    attack = 1.5
     health = 3
-    max_health = 2
-    heal_rate = 2
+    max_health = 3
+    heal_rate = 0.4
     speed = 2
     stealth = 0
     power = 5
@@ -100,10 +100,10 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     view_range = 4
 
     [[ green virus ]]
-    attack = 1
-    health = 2
-    max_health = 2
-    heal_rate = 2
+    attack = 1.3
+    health = 4
+    max_health = 4
+    heal_rate = 0.5
     speed = 1
     stealth = 0
     power = 5
@@ -113,7 +113,7 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     view_range = 3
 
     [[ black skull ]]
-    attack = 1
+    attack = 1.7
     health = 2
     max_health = 2
     heal_rate = 2
@@ -375,6 +375,12 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     loop = -1
 
     [[ blue ice crash ]]
+    gid = 443
+    frames = 443, 444, 445, 446, 447, 448, 449, 450
+    fps = 6
+    loop = 0
+
+    [[ the doctor crash ]]
     gid = 443
     frames = 443, 444, 445, 446, 447, 448, 449, 450
     fps = 6
