new debug command to warp to the demo-map

--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -12,8 +12,6 @@ description = you awaken to consciousness
 
 [ levels ]
 
-    [[ test-map.tmx ]]
-
     [[ level_01.tmx ]]
     title = ""point insertion""
     entry dialogue = introduction
@@ -27,6 +25,8 @@ description = you awaken to consciousness
 
     [[ level_04.tmx ]]
     title = ""the doctor will see you now""
+
+    [[ demo-map.tmx ]]
 
 # a list of tiles that block character movement
 [ blocking tiles ]
