Add story levels definitions.

--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -13,18 +13,27 @@ description = you awaken to consciousness
 [ levels ]
 
     [[ level_01.tmx ]]
-    title = ""point insertion""
+    title = point insertion
     entry dialogue = introduction
     entry message = welcome to alive - press F1 for help
 
     [[ level_02.tmx ]]
-    title = ""the big reboot""
+    title = the big reboot
 
     [[ level_03.tmx ]]
-    title = ""anomalies may occur""
+    title = anomalies may occur
 
-    [[ level_04.tmx ]]
-    title = ""the doctor will see you now""
+    [[ level_04_diagnostics.tmx ]]
+    title = diagnostics
+
+    [[ level_05_storage.tmx ]]
+    title = data storage
+
+    [[ level_06_conduit.tmx ]]
+    title = the conduit
+
+    [[ level_07_buildlab.tmx ]]
+    title = the build lab
 
     [[ demo-map.tmx ]]
 
@@ -91,7 +100,7 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     health = 3
     max_health = 3
     heal_rate = 0.4
-    speed = 2
+    speed = 0.7
     stealth = 0
     power = 5
     max_power = 5
