Add sick green ice character data and crash animation.

--- a/data/stories/ascension/story.conf
+++ b/data/stories/ascension/story.conf
@@ -108,6 +108,19 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     modes = leftright, magnet
     view_range = 4
 
+    [[ sick green ice ]]
+    attack = 0.5
+    health = 2
+    max_health = 3
+    heal_rate = 0.5
+    speed = 0.5
+    stealth = 0
+    power = 0
+    max_power = 0
+    power_restore_rate = 0
+    modes = magnet, random
+    view_range = 4
+
     [[ green virus ]]
     attack = 1.3
     health = 4
@@ -418,6 +431,12 @@ black skull = 528, 529, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 540, 5
     frames = 477, 478, 479, 478, 477, 477, 477, 477, 477, 477, 477, 477, 477
     fps = 6
     loop = -1
+
+    [[ sick green ice crash ]]
+    gid = 477
+    frames = 477, 478, 479, 480, 481, 482, 483, 484
+    fps = 6
+    loop = 0
 
     [[ green virus idle ]]
     gid = 495
